# cli-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Info.plist  LICENSE  Nodes.xml  README.md  Tokens.xml  annotated.html  annotated.js  classes.html  dir_000002_000003.html  dir_000003_000004.html  dir_000003_000005.html  dir_000003_000006.html  dir_000003_000007.html  dir_000003_000008.html  dir_000003_000009.html  dir_000003_000012.html  dir_000004_000006.html  dir_000004_000011.html  dir_000004_000012.html  dir_000006_000003.html  dir_000006_000005.html  dir_000006_000009.html  dir_000006_000012.html  dir_000007_000003.html  dir_000007_000004.html  dir_000007_000009.html  dir_000007_000012.html  dir_000008_000003.html  dir_000008_000004.html  dir_000008_000005.html  dir_000008_000006.html  dir_000008_000011.html  dir_000008_000012.html  dir_000009_000004.html  dir_000009_000005.html  dir_000009_000006.html  (+192 more)
src/app/: CMakeLists.txt  main.cpp
src/app/cli/: A_Netstat_Command_Response_Handler.cpp  A_Netstat_Command_Response_Handler.hpp  A_Network_Asset_Command_Response_Handler.cpp  A_Network_Asset_Command_Response_Handler.hpp  A_Ping_Command_Response_Handler.cpp  A_Ping_Command_Response_Handler.hpp  A_System_Command_Response_Handler.cpp  A_System_Command_Response_Handler.hpp
src/app/core/: State_Manager.cpp  State_Manager.hpp
src/app/render/: A_Network_Status_Render_Window.cpp  A_Network_Status_Render_Window.hpp
src/app/utils/: Init_Utilities.cpp  Init_Utilities.hpp  Network_Scanner.cpp  System_Utilities.cpp  System_Utilities.hpp
src/apps/: CMakeLists.txt
src/apps/cli-full-demo/: CMakeLists.txt  main.cpp
src/apps/cli-full-demo/core/: State_Manager.cpp  State_Manager.hpp
src/apps/cli-full-demo/handlers/: A_Netstat_Command_Response_Handler.hpp  A_Network_Asset_Command_Response_Handler.cpp  A_Ping_Command_Response_Handler.cpp  A_System_Command_Response_Handler.cpp
src/apps/cli-full-demo/render/: A_Network_Status_Render_Window.cpp  A_Network_Status_Render_Window.hpp  A_User_Status_Render_Window.cpp
src/apps/cli-full-demo/utils/: Init_Utilities.cpp  Init_Utilities.hpp  Network_Scanner.cpp
src/apps/cli-multiuser-demo/: CMakeLists.txt  main.cpp
src/apps/cli-multiuser-demo/core/: State_Manager.cpp  State_Manager.hpp
src/apps/cli-multiuser-demo/handlers/: A_System_Command_Response_Handler.cpp  A_System_Command_Response_Handler.hpp  A_User_Session_Event_Handler.cpp  A_User_Session_Event_Handler.hpp
src/apps/cli-multiuser-demo/render/: A_User_Status_Render_Window.cpp  A_User_Status_Render_Window.hpp
src/apps/cli-multiuser-demo/utils/: Init_Utilities.cpp  Init_Utilities.hpp
src/apps/cli-network-tester/: CMakeLists.txt
src/apps/cli-network-tester/cli/: A_Netstat_Command_Response_Handler.cpp  A_Network_Asset_Command_Response_Handler.hpp  A_Ping_Command_Response_Handler.hpp
src/apps/cli-network-tester/core/: State_Manager.cpp  State_Manager.hpp
src/apps/cli-network-tester/utils/: Init_Utilities.cpp  Network_Scanner.hpp
src/lib/: CMakeLists.txt  cli_cpp.hpp
src/lib/cli_cpp/: CMakeLists.txt  cli.hpp  core.hpp  event.hpp  handlers.hpp  io.hpp
src/lib/cli_cpp/cli/: A_CLI_Configuration_File_Parser.cpp  A_CLI_Configuration_File_Parser.hpp  A_CLI_Manager.cpp  A_CLI_Manager.hpp  A_CLI_Manager_Configuration.cpp  A_CLI_Manager_Configuration.hpp  A_CLI_Manager_Factory.cpp  A_CLI_Manager_Factory.hpp  A_Command_Response_Handler_Base.hpp  A_Connection_Manager_Base.cpp  A_Connection_Manager_Base.hpp  A_Connection_Manager_Base_Config.cpp  A_Connection_Manager_Base_Config.hpp  A_Connection_Manager_Factory.cpp  A_Connection_Manager_Factory.hpp  A_Connection_Manager_Local.cpp  A_Connection_Manager_Local.hpp  A_Connection_Manager_Local_Config.cpp  A_Connection_Manager_Local_Config.hpp  A_Connection_Manager_Socket.cpp  A_Connection_Manager_Socket.hpp  A_Connection_Manager_Socket_Config.cpp  A_Connection_Manager_Socket_Config.hpp  A_Connection_Manager_Socket_JSON.cpp  A_Connection_Manager_Socket_JSON.hpp  A_Connection_Manager_Socket_JSON_Config.cpp  A_Connection_Manager_Socket_JSON_Config.hpp  A_Session_Event_Handler_Base.cpp  A_Session_Event_Handler_Base.hpp  A_Socket_Base_Instance.cpp  A_Socket_Base_Instance.hpp  A_Socket_Connection_Instance.cpp  A_Socket_Connection_Instance.hpp  A_Socket_JSON_Instance.cpp  A_Socket_JSON_Instance.hpp  A_Socket_Telnet_Instance.cpp  A_Socket_Telnet_Instance.hpp  CMakeLists.txt
src/lib/cli_cpp/cmd/: A_CLI_Command.cpp  A_CLI_Command.hpp  A_Command.cpp  A_Command.hpp  A_Command_Alias.cpp  A_Command_Alias.hpp  A_Command_Argument.cpp  A_Command_Argument.hpp  A_Command_History.cpp  A_Command_History.hpp  A_Command_History_Entry.cpp  A_Command_History_Entry.hpp  A_Command_Parser.cpp  A_Command_Parser.hpp  A_Command_Parser_Factory.cpp  A_Command_Parser_Factory.hpp  A_Command_Queue.cpp  A_Command_Queue.hpp  A_Command_Queue_Config.cpp  A_Command_Queue_Config.hpp  A_Command_Result.cpp  A_Command_Result.hpp  A_Command_Variable.cpp  A_Command_Variable.hpp  CMakeLists.txt  CommandArgumentType.cpp  CommandArgumentType.hpp  CommandParseStatus.cpp  CommandParseStatus.hpp
src/lib/cli_cpp/core/: A_CLI_Event_Handler_Base.cpp  A_CLI_Event_Handler_Base.hpp  A_CLI_Resize_Event_Handler.hpp  A_Connection_Manager_Event_Handler.cpp  A_Connection_Manager_Event_Handler.hpp  A_Render_Manager_Event_Handler.cpp  A_Render_Manager_Event_Handler.hpp  A_Session.cpp  A_Session.hpp  An_Event_Queue.cpp  An_Event_Queue.hpp  CLI_Event.cpp  CLI_Event.hpp  CLI_Event_Type.cpp  CLI_Event_Type.hpp  CMakeLists.txt  ConnectionType.cpp  ConnectionType.hpp  Event_Manager.cpp  Event_Manager.hpp  SessionType.cpp  SessionType.hpp
src/lib/cli_cpp/event/: A_CLI_Event_Handler_Base.cpp  A_CLI_Event_Handler_Base.hpp  A_Connection_Manager_Event_Handler.cpp  A_Connection_Manager_Event_Handler.hpp  A_Render_Manager_Event_Handler.cpp  A_Render_Manager_Event_Handler.hpp  An_Event_Queue.cpp  An_Event_Queue.hpp  (+5 more)
src/testing/unit-test/: CMakeLists.txt  unit_test_main.cpp
src/utilities/: CMakeLists.txt
src/utilities/cli-cpp-config-generator/: CMakeLists.txt  cli-cpp-config-generator.cpp
(+1375 files in other folders)
