#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    8/9/2016
#
#    Purpose:  Constructs the lib and app projects
#


#----------------------------------------#
#-      Add the CLI Multiuser Demo      -#
#----------------------------------------#
add_subdirectory(cli-multiuser-demo)

#----------------------------------------#
#-     Add the Network Tester Update    -#
#----------------------------------------#
add_subdirectory(cli-network-tester)

