#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    7/13/2015
#
#    Purpose:  Constructs the CLI-CPP Utility Libraries
#


#----------------------------------------------------#
#-      Build the Configuration File Generator      -#
#----------------------------------------------------#
add_subdirectory(cli-cpp-config-generator)

